--- a/product_multi_price/i18n/es.po
+++ b/product_multi_price/i18n/es.po
@@ -121,7 +121,6 @@ msgid "Price"
 msgstr "Precio"
 
 #. module: product_multi_price
-#: model:ir.model.fields,field_description:product_multi_price.field_product_multi_price__name_text
 #: model:ir.model.fields,field_description:product_multi_price.field_product_multi_price_name__name
 msgid "Price Field Name"
 msgstr "Nombre de Campo de Precio"
@@ -155,8 +154,14 @@ msgstr "Producto"
 
 #. module: product_multi_price
 #: model_terms:ir.ui.view,arch_db:product_multi_price.product_multi_price_form_view
+#: model_terms:ir.ui.view,arch_db:product_multi_price.product_multi_price_tree_view
 msgid "Product Multi Price"
 msgstr "Multi Precio de Producto"
+
+#. module: product_multi_price
+#: model_terms:ir.ui.view,arch_db:product_multi_price.product_multi_price_name_tree_view
+msgid "Product Multi Price Field Name"
+msgstr "Nombre de Campo de Multi Precio de Producto"
 
 #. module: product_multi_price
 #: model:ir.model,name:product_multi_price.model_product_multi_price
@@ -172,9 +177,6 @@ msgstr "Plantilla de producto"
 #: model:res.groups,name:product_multi_price.group_show_multi_prices
 msgid "Show multi prices"
 msgstr "Muestra precios múltiples"
-
-#~ msgid "Product Multi Price Field Name"
-#~ msgstr "Nombre de Campo de Multi Precio de Producto"
 
 #~ msgid "Cost"
 #~ msgstr "Coste"
