--- a/product_multi_price/i18n/fr.po
+++ b/product_multi_price/i18n/fr.po
@@ -1,22 +1,24 @@
-# Translation of Odoo Server.
-# This file contains the translation of the following modules:
-# 	* product_multi_price
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0\n"
+"Project-Id-Version: ametras-xsolutions\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
-"Language-Team: \n"
+"Language-Team: French\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Crowdin-Project: ametras-xsolutions\n"
+"X-Crowdin-Project-ID: 530964\n"
+"X-Crowdin-Language: fr\n"
+"X-Crowdin-File: /[AmetrasIntelligence.oca-migrated] 16.0/product_multi_price/i18n/product_multi_price.pot\n"
+"X-Crowdin-File-ID: 21390\n"
+"Language: fr_FR\n"
+"PO-Revision-Date: 2024-09-25 12:08\n"
 
 #. module: product_multi_price
 #: model:ir.model.constraint,message:product_multi_price.constraint_product_multi_price_multi_price_uniq
-msgid ""
-"A field name cannot be assigned to a product twice for the same company"
+msgid "A field name cannot be assigned to a product twice for the same company"
 msgstr ""
 
 #. module: product_multi_price
@@ -64,3 +66,4 @@ msgstr ""
 #: model:res.groups,name:product_multi_price.group_show_multi_prices
 msgid "Show multi prices"
 msgstr ""
+
